# aiopaykassa

./: .gitignore  LICENSE  README.md  pyproject.toml
aiopaykassa/: __init__.py  enums.py  exceptions.py
aiopaykassa/clients/: __init__.py  api.py  sci.py
aiopaykassa/clients/base/: __init__.py  api.py  base.py  sci.py
aiopaykassa/endpoints/: __init__.py  base.py
aiopaykassa/endpoints/api/: __init__.py  currency_rate.py  get_shop_balance.py  payment.py
aiopaykassa/endpoints/sci/: __init__.py  confirm_order.py  confirm_transaction_notification.py  create_order.py  create_order_get_data.py
aiopaykassa/types/: __init__.py  base.py  confirmed_order.py  currency_rate.py  new_order.py  new_order_data.py  payment.py  shop_balance.py  transaction_notification.py
