[tool.poetry]
name = "aiopaykassa"
version = "0.1.0"
description = ""
authors = ["drforse <george.lifeslice@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.1"
pydantic = "^1.9.0"
ujson = {version = "^5.2.0", optional = true}

[tool.poetry.dev-dependencies]

[tool.poetry.extras]
ujson = ["ujson"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
